# src/inspect_scout/_view/www/src/api/api.ts
@@ -39,6 +39,7 @@ export interface ScanApi {
     uuid: string
   ): Promise<ScanResultInputData>;
   getActiveScans(): Promise<ActiveScansResponse>;
+  postCode(condition: Condition): Promise<Record<string, string>>;
 
   storage: ClientStorage;
   capability: "scans" | "workbench";
