# src/inspect_scout/_view/www/src/types/generated.ts
@@ -4,6 +4,26 @@
  */
 import { JsonValue } from "./json-value";
 export interface paths {
+    "/code": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        get?: never;
+        put?: never;
+        /**
+         * Code endpoint
+         * @description Process condition.
+         */
+        post: operations["code_code_post"];
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
     "/config": {
         parameters: {
             query?: never;
@@ -2987,6 +3007,32 @@ export interface components {
 }
 export type $defs = Record<string, never>;
 export interface operations {
+    code_code_post: {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        requestBody: {
+            content: {
+                "application/json": components["schemas"]["Condition"];
+            };
+        };
+        responses: {
+            /** @description Successful Response */
+            200: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": {
+                        [key: string]: string;
+                    };
+                };
+            };
+        };
+    };
     config_config_get: {
         parameters: {
             query?: never;
